assignment3/app-1-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-1-dep
spec:
  selector:
    matchLabels:
      app: app-1
  replicas: 2
  template:
    metadata:
      labels:
        app: app-1
    spec:
      containers:
      - name: app-1
        image: ghcr.io/denoslab/ensf400-sample-app:v1
        ports:
        - containerPort: 3000
