assignment3/app-1-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-app-1
spec:
  type: ClusterIP
  selector: 
    app: app-1
  ports:
    - port: 8080
      targetPort: 3000
